K8S/argocd/HelmCharts/minio/02-console.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: console
  labels:
    name: console
spec:
  ports:
    - port: 9090
      name: http
    - port: 9443
      name: https
  selector:
    app: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console
          # image: minio/console:v0.7.5
          ## Fix to new container version
          image: minio/console:v0.30.0
          imagePullPolicy: "IfNotPresent"
          args:
            - server
          ports:
            - containerPort: 9090
              name: http
