K8S/argocd/HelmCharts/minio/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minioconsole
  namespace: minio
  # ## Fix to new versions of ingress controllers
  # annotations:
  #   kubernetes.io/ingress.class: "system-ingress"
spec:
  ## Fix to new versions of ingress controllers
  ingressClassName: "nginx"
  rules:
    - host: "minio.minkovs.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  name: http
